unpackaged/main/default/objects/ISO__c/fields/Approvals__c.field-meta.xml
<CustomField>
    <fullName>Approvals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approved</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>