unpackaged/main/default/objects/ISO__c/fields/Cashio_ISO_Agent__c.field-meta.xml
<CustomField>
    <fullName>Cashio_ISO_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists ISO agent name</description>
    <label>Cashio ISO Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ISOs</relationshipName>
    <type>Lookup</type>
</CustomField>