unpackaged/main/default/objects/ISO__c/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <label>Commission Structure</label>
    <type>TextArea</type>
</CustomField>