unpackaged/main/default/objects/ISO__c/fields/Copy_Merchant_on_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Copy_Merchant_on_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Merchant on Approvals</label>
    <type>Checkbox</type>
</CustomField>