unpackaged/main/default/objects/ISO__c/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Funded</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>