unpackaged/main/default/objects/ISO__c/fields/ISO_Active__c.field-meta.xml
<CustomField>
    <fullName>ISO_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO Active</label>
    <type>Checkbox</type>
</CustomField>