unpackaged/main/default/objects/ISO__c/fields/ISO_Status__c.field-meta.xml
<CustomField>
    <fullName>ISO_Status__c</fullName>
    <label>ISO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Signed Up</fullName>
            </value>
            <value>
                <fullName>Inactive - Not Signed Up</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>