unpackaged/main/default/objects/ISO__c/fields/ISO_Type__c.field-meta.xml
<CustomField>
    <fullName>ISO_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>Leasing Broker</fullName>
            </value>
            <value>
                <fullName>CPA, Lawyer, Banker etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>