unpackaged/main/default/objects/ISO__c/fields/Revive__c.field-meta.xml
<CustomField>
    <fullName>Revive__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revive</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>