unpackaged/main/default/objects/ISO__c/fields/Send_Merchant_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Merchant_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Merchant Emails</label>
    <type>Checkbox</type>
</CustomField>