unpackaged/main/default/objects/ISO__c/fields/Signed_ISO_agreement_on_file__c.field-meta.xml
<CustomField>
    <fullName>Signed_ISO_agreement_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed ISO agreement on file</label>
    <type>Checkbox</type>
</CustomField>