unpackaged/main/default/objects/ISO__c/fields/Submit_to_Fund__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Fund__c</fullName>
    <formula>IF( 
   AND(Submitted__c &lt;&gt; 0, NOT(ISNULL(Submitted__c))), 
   Funded__c /  Submitted__c ,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit to Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>