unpackaged/main/default/objects/ISO__c/fields/Submit_to_Fund_List_View__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Fund_List_View__c</fullName>
    <formula>Text(round((Submit_to_Fund__c  * 100) ,2)) &amp; "%"</formula>
    <label>Submit to Fund (List View)</label>
    <type>Text</type>
</CustomField>