unpackaged/main/default/objects/ISO__c/fields/Submitted_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Submitted_30_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Submitted (30 Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>