unpackaged/main/default/objects/ISO__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Submitted</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>