unpackaged/main/default/objects/ISO__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <length>60</length>
    <type>Text</type>
</CustomField>