unpackaged/main/default/objects/ISO__c/listViews/Active_ISO_s.listView-meta.xml
<ListView>
    <fullName>Active_ISO_s</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>ISO_Active__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ISO_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active ISO's</label>
</ListView>