unpackaged/main/default/objects/ISO__c/listViews/My_Partners.listView-meta.xml
<ListView>
    <fullName>My_Partners</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Submitted_30_Days__c</columns>
    <columns>Submitted__c</columns>
    <columns>Approvals__c</columns>
    <columns>Declined__c</columns>
    <columns>Funded__c</columns>
    <columns>Revive__c</columns>
    <columns>Submit_to_Fund_List_View__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Partners</label>
</ListView>